<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.views.hillfort.HillfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="110dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:text="@string/label_registered_email"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_email"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_email"
                android:textSize="18sp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbl_email"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_total"
                android:layout_width="110dp"
                android:layout_height="22dp"
                android:text="@string/label_total"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_total"
                app:layout_constraintEnd_toEndOf="@+id/lbl_email"
                app:layout_constraintStart_toStartOf="@+id/lbl_email" />

            <TextView
                android:id="@+id/txt_total"
                android:textSize="18sp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/txt_email"
                app:layout_constraintStart_toStartOf="@+id/txt_email"
                app:layout_constraintTop_toBottomOf="@+id/txt_email" />

            <TextView
                android:id="@+id/lbl_visited"
                android:layout_width="110dp"
                android:layout_height="22dp"
                android:text="@string/label_visited"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_visited"
                app:layout_constraintEnd_toEndOf="@+id/lbl_email"
                app:layout_constraintStart_toStartOf="@+id/lbl_email" />

            <TextView
                android:id="@+id/txt_visited"
                android:textSize="18sp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/txt_total"
                app:layout_constraintStart_toStartOf="@+id/txt_total"
                app:layout_constraintTop_toBottomOf="@+id/txt_total" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>